# SFML-Astar-pathfinding

./: CMakeLists.txt  README.md
include/: Cell.hpp  Coordinate.hpp  Map.hpp  Path.hpp
src/: Cell.cpp  Map.cpp  Path.cpp  main.cpp
